--- a/primer-ejercicio/src/App.css
+++ b/primer-ejercicio/src/App.css
@@ -91,6 +91,11 @@ a{
     flex-direction: column;
 }
 
+/* -------------------Hovers------------------- */
+
+#checkTerms:hover, .verMasController:hover, #videoDiv img:hover{
+    cursor: pointer;
+}
 
 /* -------------------Header------------------- */
 #bckimg{
@@ -126,7 +131,9 @@ a{
     text-align: center;
     flex-direction: column;
     color: white;
+    -webkit-clip-path: url(#gp-header-default-mask);
 }
+
 
 #headerTitle{
     line-height: 70px;
@@ -144,6 +151,7 @@ a{
     margin: 0;
     padding: 10px 20px;
     font-size: 10px;
+    margin-right: 2vh;
 }
 
 .btnHeaderStyle{
@@ -156,7 +164,6 @@ a{
     background: #FFFFFF;
     border-radius: 50px;
     border: 0;
-    display: none;
     transition: opacity 0.3s ease-in-out;
 }
 
@@ -171,7 +178,7 @@ a{
     color: #7A33CC;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     #headerLogo {
       position: fixed;
       z-index: 2;
@@ -179,7 +186,29 @@ a{
     #btnHeaderMobile{
         display: flex;
     }
-  }
+    #headerTitle{
+        font-size: 30px;
+        line-height: 45px;
+    }
+    .textGrande{
+        font-size: 30px;
+    }
+    .textPequeño{
+        font-size: 16px;
+    }
+}
+
+#line{
+    width: 100%;
+    height: 20vh;
+    background: url("../Recursos/Line.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: absolute;
+    z-index: 1;
+    transform: translateY(-70%);
+}
 
 
 /* -------------------Sección fomulario------------------- */
@@ -195,7 +224,7 @@ a{
     background: #FFFFFF;
     border-radius: 20px;
     filter: drop-shadow(0px 10px 30px rgba(0, 0, 0, 0.15));
-    margin-right: 3vh;
+    font-weight: 500;
 }
 
 .checksForm img{
@@ -210,7 +239,7 @@ form input, form select{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 20px;
+    padding: 15px;
     background: #FFFFFF;
     border: 1px solid #878787;
     border-radius: 10px;
@@ -236,7 +265,7 @@ form select{
     -webkit-appearance: none;
     appearance: none;
     float: left;
-    height: 18px;
+    height: 22px;
     width: 22px;
     padding: 0;
     border-radius: 3px;
@@ -248,14 +277,13 @@ form select{
 }
 
 #colTerms{
-    margin-top: 2vh;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
 #rowSend{
-    margin-top: 3vh;
+    margin-top: 1vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -295,12 +323,13 @@ form select{
     text-align: center;
     color: #FFFFFF;
     align-self: flex-end;
-    transform: translateY(-13vh);
+    transform: translateY(4vh);
     background: #2F343D;
     border: 1px solid #FFFFFF;
     border-radius: 20px 0 0 20px;
     padding: 0.1vh 1vh;
     position: absolute;
+    top: 0;
 }
 
 .topVentas{
@@ -367,6 +396,11 @@ form select{
     margin: 0;
 }
 
+.verMasController{
+    display: flex;
+    align-items: center;
+}
+
 .verMasIcon{
     width: 15px;
     margin-left: 1vh;
@@ -387,6 +421,10 @@ form select{
     color: #5D338D;
 }
 
+.textVer{
+    display: none;
+}
+
 .validezIcon{
     width: 15px;
     margin-right: 1vh;
@@ -395,8 +433,8 @@ form select{
 .verMasDiv{
     margin-top: 2vh;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .validezDiv{
@@ -414,12 +452,16 @@ form select{
     margin: 0;
 }
 
+#sectionDiff{
+    margin-top: 6vh;
+}
+
 .infoCard{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 30px 45px;
+    padding: 45px 45px;
     background: #FFFFFF;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
@@ -438,7 +480,6 @@ form select{
 #titleYMás{
     margin-top: 5vh;
 }
-
 #ymasDesc{
     width: 70%;
     text-align: center;
@@ -519,7 +560,7 @@ form select{
 }
 
 /* -------------------Footer------------------- */
-footer{
+#footer{
     margin-top: 10vh;
     display: flex;
     height: 5vh;
