--- a/primer-ejercicio/src/App.css
+++ b/primer-ejercicio/src/App.css
@@ -87,6 +87,8 @@ a {
   border-radius: 50px;
   border: 0;
   display: block;
+  margin-top: 1vh;
+
 }
 .btnPrincipal:hover,
 .btnCard:hover {
@@ -122,8 +124,6 @@ a {
   cursor: pointer;
 }
 
-
-
 /* -------------------Divider + CTA------------------- */
 #titleYMás {
   margin-top: 5vh;
@@ -132,8 +132,6 @@ a {
   width: 70%;
   text-align: center;
 }
-
-
 
 /* -------------------Mobile------------------- */
 
