--- a/primer-ejercicio/src/components/GpExperienciacards/ExperienciaCards.css
+++ b/primer-ejercicio/src/components/GpExperienciacards/ExperienciaCards.css
@@ -44,10 +44,12 @@
   background: linear-gradient(83.33deg, var(--purple-dark) 0%, var(--red) 100%);
   border-radius: 20px 20px 0 0;
   text-align: center;
-  padding: 2px 35px;
+  padding: 2px 10px;
   position: absolute;
   z-index: 1;
   top: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .topVentas p {
@@ -159,5 +161,8 @@
 
   .cardRow > div.col-12 {
     padding: 0;
+  }
+  .topVentas {
+    padding: 0
   }
 }
